# the-prompt-book

./: README.md  compose.dev.yml  compose.prod.yml  compose.staging.yml  compose.test.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py  exceptions.py  types.py
backend/app/dependencies/: __init__.py  auth_deps.py  user_deps.py
backend/app/repositories/: __init__.py  comments_repository.py  likes_repository.py  prompts_repository.py  user_repository.py
backend/app/routes/: auth_routes.py  prompt_routes.py  user_routes.py
backend/app/schemas/: __init__.py  comment_schema.py  like_schema.py  pagination_schema.py  prompt_schema.py  user_schema.py
backend/app/services/: auth_service.py  comments_service.py  likes_service.py  prompts_service.py  services_manager.py  user_service.py
backend/app/utils/: __init__.py  handles.py  hashtags.py
backend/tests/: conftest.py
backend/tests/e2e/: test_auth_endpoints.py  test_prompts_endpoints.py  test_user_endpoints.py
backend/tests/integration/: test_comments_repository_integration.py  test_prompts_repository_integration.py
backend/tests/integration/repositories/: test_comments_repository_integration.py  test_likes_repository_integration.py  test_prompts_repository_integration.py  test_user_repository_integration.py
backend/tests/mocks/: __init__.py  comment_mocks.py  like_mocks.py  prompt_mocks.py  test_prompts_mock.py  user_mocks.py
backend/tests/unit/: test_prompts_service.py
backend/tests/unit/core/: test_types.py
(+176 files in other folders)
